# EttleX-R

./: .gitignore  .mcp.json  .prettierignore  .rustfmt.toml  .stylelintrc.json  CLAUDE.md  Cargo.toml  README.md  clippy.toml  eslint.config.mjs  makefile  package.json  pnpm-lock.yaml  snapshot_commit_ettle.md  snapshot_commit_rendered.md
crates/ettlex-agent-api/: Cargo.toml  README.md
crates/ettlex-agent-api/src/: lib.rs
crates/ettlex-agent-api/src/boundary/: mapping.rs  mod.rs
crates/ettlex-agent-api/src/operations/: ettle.rs  group.rs  mod.rs  relation.rs
crates/ettlex-agent-api/tests/: agent_api_conformance_tests.rs  agent_api_ettle_tests.rs  agent_api_group_tests.rs  agent_api_relation_tests.rs
crates/ettlex-core/: Cargo.toml  README.md
crates/ettlex-core/examples/: apply_demo.rs  comprehensive_demo.rs
crates/ettlex-core/src/: apply.rs  approval_router.rs  candidate_resolver.rs  commands.rs  errors.rs  lib.rs  logging_facility.rs  policy.rs  policy_provider.rs
crates/ettlex-core/src/constraint_engine/: mod.rs
crates/ettlex-core/src/diff/: engine.rs  human_summary.rs  mod.rs  model.rs
crates/ettlex-core/src/logging_facility/: init.rs  macros.rs  test_capture.rs
crates/ettlex-core/src/model/: constraint.rs  decision.rs  ep.rs  ettle.rs  metadata.rs  mod.rs
crates/ettlex-core/src/ops/: constraint_ops.rs  decision_ops.rs  ep_ops.rs  ettle_ops.rs  mod.rs  projection.rs  refinement_ops.rs  store.rs
crates/ettlex-core/src/queries/: decision_queries.rs  mod.rs
crates/ettlex-core/src/render/: bundle_render.rs  ettle_render.rs  mod.rs
crates/ettlex-core/src/rules/: invariants.rs  mod.rs  validation.rs
crates/ettlex-core/src/snapshot/: digest.rs  manifest.rs  mod.rs
crates/ettlex-core/src/traversal/: ept.rs  mod.rs  rt.rs
crates/ettlex-core/tests/: anchored_deletion_tests.rs  apply_atomicity_tests.rs  apply_command_coverage_tests.rs  apply_ep_update_tests.rs  constraint_engine_slice0_tests.rs  constraint_schema_stubs_tests.rs  decision_linking_tests.rs  decision_query_tests.rs  decision_schema_stubs_tests.rs  ep_crud_tests.rs  ep_update_store_tests.rs  error_facility_tests.rs  ettle_crud_tests.rs  logging_facility_tests.rs  refinement_tests.rs  rendering_tests.rs  scenario_01_create_ettle_with_metadata_tests.rs  scenario_02_create_ettle_with_ep0_content_tests.rs  scenario_03_add_ep_to_ettle_tests.rs  scenario_04_remove_tombstone_ep_tests.rs  scenario_05_membership_integrity_tests.rs  scenario_06_refinement_invariants_tests.rs  scenario_07_ep_ordinal_revalidation_tests.rs  scenario_08_deterministic_active_ep_tests.rs  scenario_09_ept_mapping_sensitivity_tests.rs  scenario_10_deletion_safety_tests.rs  snapshot_constraints_envelope_tests.rs  snapshot_diff_tests.rs  snapshot_digest_tests.rs  snapshot_manifest_tests.rs  traversal_ept_tests.rs  traversal_rt_tests.rs  validation_tests.rs
crates/ettlex-core/tests/common/: mod.rs
crates/ettlex-engine/: Cargo.toml  README.md
crates/ettlex-engine/src/: lib.rs
crates/ettlex-engine/src/commands/: command.rs  decision.rs  engine_command.rs  engine_query.rs  ettle.rs  group.rs  mcp_command.rs  mod.rs  read_tools.rs  relation.rs  snapshot.rs
crates/ettlex-engine/src/snapshot/: mod.rs
crates/ettlex-engine/tests/: action_read_tools_integration_tests.rs  constraint_engine_slice0_tests.rs  constraint_manifest_integration_tests.rs  decision_tests.rs  ep_update_engine_tests.rs  ettle_architectural_conformance_tests.rs  ettle_crud_tests.rs  group_tests.rs  identity_contract_tests.rs  mcp_ep_update_tests.rs  policy_create_tests.rs  policy_provider_tests.rs  policy_ref_optional_tests.rs  predicate_preview_tests.rs  profile_approval_query_tests.rs  relation_tests.rs  slice_02_conformance_tests.rs  slice_03_conformance_tests.rs  snapshot_commit_by_leaf_tests.rs  snapshot_commit_determinism_tests.rs  snapshot_commit_idempotency_tests.rs  snapshot_commit_legacy_resolution_tests.rs  snapshot_commit_policy_tests.rs  snapshot_commit_tests.rs  snapshot_diff_integration_tests.rs
crates/ettlex-errors/: Cargo.toml
crates/ettlex-errors/src/: lib.rs  macros.rs
crates/ettlex-errors/tests/: conformance_tests.rs  errors_tests.rs
crates/ettlex-logging/: Cargo.toml
crates/ettlex-logging/src/: init.rs  lib.rs  macros.rs  test_capture.rs
crates/ettlex-logging/tests/: logging_tests.rs
crates/ettlex-mcp/: Cargo.toml  README.md
crates/ettlex-mcp/src/: auth.rs  canonical.rs  context.rs  error.rs  lib.rs  main.rs  server.rs
crates/ettlex-mcp/src/tools/: apply.rs  approval.rs  constraint.rs  decision.rs  ep.rs  ept.rs  ettle.rs  group.rs  mod.rs  policy.rs  predicate.rs  profile.rs  relation.rs  snapshot.rs  state.rs
crates/ettlex-mcp/tests/: group_read_tools_tests.rs  mcp_ep_update_tool_tests.rs  mcp_integration_tests.rs  mcp_missing_tools_tests.rs  relation_read_tools_tests.rs
crates/ettlex-memory/: Cargo.toml  README.md
crates/ettlex-memory/src/: lib.rs  macros.rs  memory_manager.rs
crates/ettlex-memory/tests/: memory_manager_tests.rs
crates/ettlex-store/: Cargo.toml  README.md
crates/ettlex-store/migrations/: 001_initial_schema.sql  002_snapshot_ledger.sql  003_constraints_schema.sql  004_decisions_schema.sql  005_profiles_schema.sql  006_approval_requests_schema.sql  007_approval_cas_schema.sql  008_mcp_command_log.sql  009_parent_ep_id.sql  010_backfill_parent_ep_id.sql  011_eps_title.sql  012_ettle_v2_schema.sql  013_ettle_timestamps_iso8601.sql  014_slice02_schema.sql  015_ep_retirement.sql  checksums.toml
crates/ettlex-store/src/: db.rs  errors.rs  file_policy_provider.rs  lib.rs  profile.rs
crates/ettlex-store/src/cas/: atomic.rs  fs_store.rs  mod.rs  sharding.rs
crates/ettlex-store/src/migrations/: checksums.rs  embedded.rs  mod.rs  (+1 more)
crates/ettlex-store/tests/: cas_test.rs  constraint_persistence_tests.rs  ep_content_digest_tests.rs  ettle_migration_tests.rs  hydration_test.rs  migrations_test.rs  round_trip_test.rs  seed_parse_test.rs  slice_02_migration_tests.rs  slice_03_migration_tests.rs  slice_04_conformance_tests.rs  snapshot_persist_tests.rs
crates/ettlex-tauri/: Cargo.toml  README.md
(+408 files in other folders)
