[package]
name = "ettlex-agent-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "ettlex_agent_api"
path = "src/lib.rs"

[dependencies]
ettlex-memory = { path = "../ettlex-memory" }
base64 = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
toml = { workspace = true }
