[package]
name = "ettlex-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
ettlex-core-types = { workspace = true }
ettlex-errors = { workspace = true }
ettlex-logging = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
