[package]
name = "ettlex-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ettlex-core = { path = "../ettlex-core" }
ettlex-core-types = { path = "../ettlex-core-types" }
ettlex-store = { path = "../ettlex-store" }
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
serde_json = { workspace = true }
