[package]
name = "ettlex-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "ettlex_mcp"
path = "src/lib.rs"

[[bin]]
name = "ettlex-mcp"
path = "src/main.rs"

[dependencies]
ettlex-core = { path = "../ettlex-core" }
ettlex-store = { path = "../ettlex-store" }
ettlex-memory = { path = "../ettlex-memory" }
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
serde_json = { workspace = true }
