[package]
name = "ettlex-store"
version = "0.1.0"
edition = "2021"

[dependencies]
ettlex-core = { path = "../ettlex-core" }
ettlex-core-types = { path = "../ettlex-core-types" }
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"  # For digests
hex = "0.4"    # For hex encoding

[dev-dependencies]
tempfile = "3.0"
