[package]
name = "ettlex-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tauri core
tauri = { version = "1.5", features = ["api-all"] }

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Event streaming
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"